[gd_scene load_steps=50 format=2]

[ext_resource path="res://shaders/crt_shader.shader" type="Shader" id=1]
[ext_resource path="res://sprites/TerryB2.png" type="Texture" id=2]
[ext_resource path="res://player1.gd" type="Script" id=3]
[ext_resource path="res://sprites/TerryB.png" type="Texture" id=4]
[ext_resource path="res://sprites/fixedBG.png" type="Texture" id=5]
[ext_resource path="res://player2.gd" type="Script" id=6]
[ext_resource path="res://MOCKUP1.png" type="Texture" id=7]
[ext_resource path="res://sprites/Timer.png" type="Texture" id=8]
[ext_resource path="res://scripts/TimerObject.gd" type="Script" id=9]
[ext_resource path="res://scripts/TimerSprite.gd" type="Script" id=10]
[ext_resource path="res://scripts/CameraController.gd" type="Script" id=11]
[ext_resource path="res://scripts/healthBarScript.gd" type="Script" id=12]
[ext_resource path="res://scripts/inputDisplay.gd" type="Script" id=13]

[sub_resource type="ShaderMaterial" id=6]

[sub_resource type="CapsuleShape2D" id=27]
radius = 8.0
height = 30.0

[sub_resource type="Animation" id=31]
resource_name = "crouch"
length = 0.0166667
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath("playerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="Animation" id=34]
resource_name = "dash"
length = 0.266667
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath("playerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0333333, 0.166667, 0.216667 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 23, 24, 25 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PoolRealArray( 0.05, 0.216667 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ 60 ],
"method": "moveViaAnimation"
}, {
"args": [ 1000 ],
"method": "moveViaAnimation"
} ]
}

[sub_resource type="Animation" id=35]
resource_name = "dashBack"
length = 0.216667
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath("playerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0333333, 0.133333 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 10, 9 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PoolRealArray( 0.05, 0.216667 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ 60 ],
"method": "moveViaAnimation"
}, {
"args": [ 1000 ],
"method": "moveViaAnimation"
} ]
}

[sub_resource type="Animation" id=26]
resource_name = "falling"
length = 0.533333
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath("playerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 9 ]
}

[sub_resource type="Animation" id=30]
resource_name = "forward"
length = 0.3
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath("playerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0333333, 0.133333, 0.266667 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 20, 22, 20 ]
}

[sub_resource type="Animation" id=11]
resource_name = "hadouken"
step = 0.128982
tracks/0/type = "value"
tracks/0/path = NodePath("playerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 2 ]
}

[sub_resource type="Animation" id=9]
resource_name = "idle"
length = 0.466668
loop = true
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath("playerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0666667, 0.133333, 0.2, 0.266667, 0.333333, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 2, 1, 0 ]
}

[sub_resource type="Animation" id=10]
resource_name = "jab"
length = 0.2
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath("playerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0166667, 0.0666667 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 17, 16 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.0333333 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 60 ],
"method": "moveViaAnimation"
} ]
}

[sub_resource type="Animation" id=33]
resource_name = "jumpDiag"
length = 0.466668
step = 0.0166667
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.05 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 28 ],
"method": "playerJump"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("playerSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.0333333, 0.15, 0.2, 0.25, 0.3, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 11, 12, 13, 14, 10 ]
}

[sub_resource type="Animation" id=25]
resource_name = "jumpUp"
length = 0.516668
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath("playerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0333333, 0.0833333, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 10, 9, 10 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.05 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 32 ],
"method": "playerJump"
} ]
}

[sub_resource type="Animation" id=29]
resource_name = "short"
length = 0.2
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath("playerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0333333, 0.1, 0.166667 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 20, 21, 20 ]
}

[sub_resource type="Animation" id=15]
resource_name = "strong"
length = 0.366667
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath("playerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.0166667, 0.0666667, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 17, 18, 19 ]
}

[sub_resource type="Animation" id=32]
resource_name = "walk"
length = 0.266667
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath("playerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0666667, 0.133333, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8 ]
}

[sub_resource type="Animation" id=36]
resource_name = "crouch"
length = 0.0166667
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath("playerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="Animation" id=37]
resource_name = "dash"
length = 0.266667
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath("playerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0333333, 0.166667, 0.216667 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 23, 24, 25 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PoolRealArray( 0.05, 0.216667 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ 60 ],
"method": "moveViaAnimation"
}, {
"args": [ 1000 ],
"method": "moveViaAnimation"
} ]
}

[sub_resource type="Animation" id=38]
resource_name = "dashBack"
length = 0.216667
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath("playerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0333333, 0.133333 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 10, 9 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PoolRealArray( 0.05, 0.216667 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ 60 ],
"method": "moveViaAnimation"
}, {
"args": [ 1000 ],
"method": "moveViaAnimation"
} ]
}

[sub_resource type="Animation" id=39]
resource_name = "falling"
length = 0.533333
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath("playerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 9 ]
}

[sub_resource type="Animation" id=40]
resource_name = "forward"
length = 0.3
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath("playerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0333333, 0.133333, 0.266667 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 20, 22, 20 ]
}

[sub_resource type="Animation" id=41]
resource_name = "hadouken"
step = 0.128982
tracks/0/type = "value"
tracks/0/path = NodePath("playerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 2 ]
}

[sub_resource type="Animation" id=42]
resource_name = "idle"
length = 0.466668
loop = true
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath("playerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0666667, 0.133333, 0.2, 0.266667, 0.333333, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 2, 1, 0 ]
}

[sub_resource type="Animation" id=43]
resource_name = "jab"
length = 0.2
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath("playerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0166667, 0.0666667 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 17, 16 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.0333333 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 60 ],
"method": "moveViaAnimation"
} ]
}

[sub_resource type="Animation" id=44]
resource_name = "jumpDiag"
length = 0.466668
step = 0.0166667
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.05 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 28 ],
"method": "playerJump"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("playerSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.0333333, 0.15, 0.2, 0.25, 0.3, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 11, 12, 13, 14, 10 ]
}

[sub_resource type="Animation" id=45]
resource_name = "jumpUp"
length = 0.516668
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath("playerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0333333, 0.0833333, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 10, 9, 10 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.05 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 32 ],
"method": "playerJump"
} ]
}

[sub_resource type="Animation" id=46]
resource_name = "short"
length = 0.2
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath("playerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0333333, 0.1, 0.166667 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 20, 21, 20 ]
}

[sub_resource type="Animation" id=47]
resource_name = "strong"
length = 0.366667
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath("playerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.0166667, 0.0666667, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 17, 18, 19 ]
}

[sub_resource type="Animation" id=48]
resource_name = "walk"
length = 0.266667
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath("playerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0666667, 0.133333, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8 ]
}

[sub_resource type="RectangleShape2D" id=21]
extents = Vector2( 129, 41 )

[sub_resource type="RectangleShape2D" id=22]
extents = Vector2( 20, 111.5 )

[sub_resource type="RectangleShape2D" id=23]
extents = Vector2( 14.75, 118.5 )

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 230, 9.5 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 222.75, 7 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 8.75, 122.25 )

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 6.5, 119.5 )

[sub_resource type="ShaderMaterial" id=24]
shader = ExtResource( 1 )
shader_param/screen_size = Vector2( 1920, 1080 )
shader_param/show_curvature = false
shader_param/curvature_x_amount = 0.0
shader_param/curvature_y_amount = 0.0
shader_param/corner_color = Color( 0, 0, 0, 1 )
shader_param/show_vignette = true
shader_param/vignette_opacity = 0.2
shader_param/show_horizontal_scan_lines = true
shader_param/horizontal_scan_lines_amount = 1080.0
shader_param/horizontal_scan_lines_opacity = 0.1
shader_param/show_vertical_scan_lines = false
shader_param/vertical_scan_lines_amount = 500.0
shader_param/vertical_scan_lines_opacity = 1.0
shader_param/boost = 1.2
shader_param/aberration_amount = 1.9

[node name="Node2D" type="Node2D"]
position = Vector2( 388, 204 )

[node name="TheGame" type="Node" parent="."]

[node name="player1" type="KinematicBody2D" parent="TheGame"]
position = Vector2( 390, 204 )
script = ExtResource( 3 )

[node name="playerSprite" type="Sprite" parent="TheGame/player1"]
material = SubResource( 6 )
position = Vector2( -20, 79 )
texture = ExtResource( 4 )
hframes = 39

[node name="CollisionShape2D" type="CollisionShape2D" parent="TheGame/player1"]
position = Vector2( -22, 88 )
shape = SubResource( 27 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="TheGame/player1"]
autoplay = "idle"
anims/crouch = SubResource( 31 )
anims/dash = SubResource( 34 )
anims/dashBack = SubResource( 35 )
anims/falling = SubResource( 26 )
anims/forward = SubResource( 30 )
anims/hadouken = SubResource( 11 )
anims/idle = SubResource( 9 )
anims/jab = SubResource( 10 )
anims/jumpDiag = SubResource( 33 )
anims/jumpUp = SubResource( 25 )
anims/short = SubResource( 29 )
anims/strong = SubResource( 15 )
anims/walk = SubResource( 32 )

[node name="DebugLabel" type="Label" parent="TheGame/player1"]
margin_left = -38.0
margin_top = 51.0
margin_right = 2.0
margin_bottom = 65.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="player2" type="KinematicBody2D" parent="TheGame"]
position = Vector2( 471, 204 )
z_index = -1
script = ExtResource( 6 )

[node name="playerSprite" type="Sprite" parent="TheGame/player2"]
material = SubResource( 6 )
position = Vector2( -20, 79 )
texture = ExtResource( 2 )
hframes = 39

[node name="CollisionShape2D" type="CollisionShape2D" parent="TheGame/player2"]
position = Vector2( -22, 88 )
shape = SubResource( 27 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="TheGame/player2"]
autoplay = "idle"
anims/crouch = SubResource( 36 )
anims/dash = SubResource( 37 )
anims/dashBack = SubResource( 38 )
anims/falling = SubResource( 39 )
anims/forward = SubResource( 40 )
anims/hadouken = SubResource( 41 )
anims/idle = SubResource( 42 )
anims/jab = SubResource( 43 )
anims/jumpDiag = SubResource( 44 )
anims/jumpUp = SubResource( 45 )
anims/short = SubResource( 46 )
anims/strong = SubResource( 47 )
anims/walk = SubResource( 48 )

[node name="DebugLabel" type="Label" parent="TheGame/player2"]
margin_left = -38.0
margin_top = 51.0
margin_right = 2.0
margin_bottom = 65.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CameraController" type="KinematicBody2D" parent="TheGame"]
position = Vector2( 404, 261 )
script = ExtResource( 11 )

[node name="mainCamera" type="Camera2D" parent="TheGame/CameraController"]
current = true
limit_left = 182
limit_right = 628
smoothing_enabled = true
smoothing_speed = 10.0
editor_draw_limits = true

[node name="topBoxCam" type="CollisionShape2D" parent="TheGame/CameraController"]
position = Vector2( 0, -157 )
shape = SubResource( 21 )

[node name="rightBoxCam" type="CollisionShape2D" parent="TheGame/CameraController"]
position = Vector2( 147, -50.5 )
shape = SubResource( 22 )

[node name="leftBoxCam" type="CollisionShape2D" parent="TheGame/CameraController"]
position = Vector2( -141.25, -56.5 )
shape = SubResource( 23 )

[node name="ground" type="StaticBody2D" parent="."]

[node name="GROUND" type="CollisionShape2D" parent="ground"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 22, 120.5 )
shape = SubResource( 18 )

[node name="stageBorders" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="stageBorders"]
position = Vector2( 16, -80 )
shape = SubResource( 12 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="stageBorders"]
position = Vector2( 18, 137 )
shape = SubResource( 12 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="stageBorders"]
position = Vector2( -215.25, 29.25 )
shape = SubResource( 13 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="stageBorders"]
position = Vector2( 246.5, 27.5 )
shape = SubResource( 14 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_scale = 0.001

[node name="UIMOCK" type="Sprite" parent="CanvasLayer"]
position = Vector2( 128, 72 )
texture = ExtResource( 7 )
hframes = 2
frame = 1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
visible = false
material = SubResource( 24 )
margin_right = 256.0
margin_bottom = 144.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UI Specific" type="Node2D" parent="CanvasLayer"]
position = Vector2( -33, -66 )
script = ExtResource( 9 )

[node name="timerBG" type="Sprite" parent="CanvasLayer/UI Specific"]
position = Vector2( 162, 85 )
texture = ExtResource( 8 )
hframes = 11

[node name="TimerSprite" type="Sprite" parent="CanvasLayer/UI Specific"]
position = Vector2( 150, 80 )
texture = ExtResource( 8 )
offset = Vector2( 3, 0 )
hframes = 11
frame = 1
script = ExtResource( 10 )

[node name="TimerSprite2" type="Sprite" parent="CanvasLayer/UI Specific"]
position = Vector2( 166, 80 )
texture = ExtResource( 8 )
offset = Vector2( 3, 0 )
hframes = 11
frame = 1
script = ExtResource( 10 )

[node name="healthBar1" type="Node" parent="CanvasLayer"]
script = ExtResource( 12 )

[node name="orangeHealth" type="ColorRect" parent="CanvasLayer/healthBar1"]
margin_left = 11.0
margin_top = 11.0
margin_right = 93.0
margin_bottom = 20.0
color = Color( 1, 0.917647, 0.584314, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="orangeHealth2" type="ColorRect" parent="CanvasLayer/healthBar1/orangeHealth"]
show_behind_parent = true
margin_right = 82.0
margin_bottom = 9.0
color = Color( 0.917647, 0.121569, 0.0196078, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="inputHandlerUI" type="Node2D" parent="CanvasLayer"]
script = ExtResource( 13 )

[node name="BACKGROUND" type="Node2D" parent="."]

[node name="deepBG" type="ParallaxBackground" parent="BACKGROUND"]
layer = -1
scroll_limit_begin = Vector2( 182, 0 )
scroll_limit_end = Vector2( 628, 0 )
scroll_ignore_camera_zoom = true

[node name="ParallaxLayer2" type="ParallaxLayer" parent="BACKGROUND/deepBG"]
position = Vector2( 388, 204 )
z_index = -3
motion_scale = Vector2( 1, 0.8 )
motion_offset = Vector2( 0, -20 )

[node name="backgroundSprite2" type="Sprite" parent="BACKGROUND/deepBG/ParallaxLayer2"]
position = Vector2( 72, -1 )
z_index = -3
texture = ExtResource( 5 )
hframes = 4
frame = 3

[node name="backgroundSprite3" type="Sprite" parent="BACKGROUND/deepBG/ParallaxLayer2"]
position = Vector2( -49, -1 )
z_index = -3
texture = ExtResource( 5 )
hframes = 4
frame = 3

[node name="ParallaxBackground" type="ParallaxBackground" parent="BACKGROUND"]
layer = 1

[node name="ParallaxLayer" type="ParallaxLayer" parent="BACKGROUND/ParallaxBackground"]
position = Vector2( 388, 204 )
z_index = 3
motion_scale = Vector2( 1, 1.2 )
motion_offset = Vector2( 0, 60 )

[node name="ForegroundSprite" type="Sprite" parent="BACKGROUND/ParallaxBackground/ParallaxLayer"]
position = Vector2( 17, 35 )
z_index = 4
texture = ExtResource( 5 )
hframes = 4
frame = 2

[node name="backgroundSprite" type="Sprite" parent="BACKGROUND"]
position = Vector2( 17, 35 )
z_index = -3
texture = ExtResource( 5 )
hframes = 4
frame = 1
